Fix modals on mobile

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -296,6 +296,9 @@ a {
 .modal-software-item {
     margin-top:5px;
     word-wrap:break-word;
+    overflow-wrap: break-word;
+    word-break: break-all;
+    -ms-word-break: break-all;
 }
 
 .software-header {
